# my_python_libraries

./: README.md  __init__.py  all_libraries.py  install_package.py  my_prime.py  setup.cfg  setup.py
src/: __init__.py  my_image.py
src/libraries.egg-info/: PKG-INFO  SOURCES.txt
