[metadata]
name = my_package
version = 0.4.0
author = Kristian Hudak 
author_email = dev.my.app.p@gmail.com
description = my private libraries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KristianHudak2/my_package

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src